crates/strider-analyze/tests/snapshots/v3__ppc32le__floats__f32_compare.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "9" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="φ f1", shape=house, fillcolor="#163030"];
  "9" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "20" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "15" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "21" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "19" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="φ Val", shape=house, fillcolor="#163030"];
  "9" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "22" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="φ Mem", shape=house, fillcolor="#163030"];
  "9" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "28" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "32" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "19" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "35" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "39" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "40" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "41" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "44" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "28" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "28" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v48" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v48" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "50" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "51" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "53" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "55" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "18" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "61" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "63" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "38" -> "63" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "55" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "64" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "68" -> "66" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "68" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "63" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "73" -> "71" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "73" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "18" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "74" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "74" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "76" -> "74" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "76" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "63" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "77" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "77" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "80" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "82" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "84" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "86" -> "85" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "86" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "87" -> "86" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "87" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "21" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "88" -> "84" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "88" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "89" -> "88" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "89" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "90" -> "89" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "90" -> "89" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "90" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "38" -> "90" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "82" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "91" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "92" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "92" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "93" -> "92" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "94" -> "92" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "94" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "93" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "95" -> "93" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "95" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "90" -> "95" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "95" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "91" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "96" -> "91" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "97" -> "91" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "97" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "98" -> "97" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "99" -> "97" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "99" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "98" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "100" -> "98" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "100" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "21" -> "100" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "90" -> "100" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "96" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "101" -> "96" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "102" -> "96" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "102" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "101" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "103" -> "101" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "103" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "90" -> "103" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "103" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
